# asignals

./: LICENCE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/asignals/: __init__.py  signal.py
tests/: test_signal.py
