[project]
name = "asignals"
version = "1.0.2"
description = "Async signals implementation for Python with type-safe callbacks"
readme = "README.md"
authors = [
    { name = "xmarlon30x2", email = "xmarlon360x2@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
